--- a/gcs_to_cloud.ipynb
+++ b/gcs_to_cloud.ipynb
@@ -702,12 +702,12 @@
    "source": [
     "# Configuration de la connexion\n",
     "engine = PostgresEngine.from_instance(\n",
-    "    project_id=\"tidal-mason-451914-p4\",\n",
-    "    instance=\"chatbot\",\n",
-    "    region=\"europe-west1\",\n",
-    "    database=\"donia_db\",\n",
-    "    user=\"postgres\",\n",
-    "    password=\"Donia12345.\"  # Celui que vous avez défini pour votre instance\n",
+    "    project_id=\"",\n",
+    "    instance=\"",\n",
+    "    region=\"",\n",
+    "    database=\"",\n",
+    "    user=\"",\n",
+    "    password=\""  # Celui que vous avez défini pour votre instance\n",
     ")"
    ]
   },
@@ -1818,35 +1818,35 @@
      "text": [
       "Found 5 documents\n",
       "\n",
-      "Score: 0.05293363401160489\n",
+      "Score: 0.35293363401160489\n",
       "Question: what are the symptoms of childhood astrocytomas ?\n",
       "Answer: the signs and symptoms of astrocytomas are not the same in every child. signs and symptoms depend on the following:          - where the tumor forms in the brain or spinal cord.    - the size of the tumor.    - how fast the tumor grows.    - the child's age and development.        some tumors do not cause signs or symptoms. signs and symptoms may be caused by childhood astrocytomas or by other conditions. check with your child's doctor if your child has any of the following:         - morning headache or headache that goes away after vomiting.    -  nausea and vomiting.    - vision, hearing, and speech problems.     - loss of balance and trouble walking.     - worsening handwriting or slow speech.    - weakness or change in feeling on one side of the body.    - unusual sleepiness.    - more or less energy than usual.    - change in personality or behavior.    -  seizures.    - weight loss or weight gain for no known reason.     - increase in the size of the head (in infants).\n",
       "Source: cancergov\n",
       "\n",
       "---\n",
       "\n",
-      "Score: 0.05293363401160489\n",
+      "Score: 0.25293363401160489\n",
       "Question: what are the symptoms of childhood astrocytomas ?\n",
       "Answer: the signs and symptoms of astrocytomas are not the same in every child. signs and symptoms depend on the following:          - where the tumor forms in the brain or spinal cord.    - the size of the tumor.    - how fast the tumor grows.    - the child's age and development.        some tumors do not cause signs or symptoms. signs and symptoms may be caused by childhood astrocytomas or by other conditions. check with your child's doctor if your child has any of the following:         - morning headache or headache that goes away after vomiting.    -  nausea and vomiting.    - vision, hearing, and speech problems.     - loss of balance and trouble walking.     - worsening handwriting or slow speech.    - weakness or change in feeling on one side of the body.    - unusual sleepiness.    - more or less energy than usual.    - change in personality or behavior.    -  seizures.    - weight loss or weight gain for no known reason.     - increase in the size of the head (in infants).\n",
       "Source: cancergov\n",
       "\n",
       "---\n",
       "\n",
-      "Score: 0.05293363401160489\n",
+      "Score: 0.45293363401160489\n",
       "Question: what are the symptoms of childhood astrocytomas ?\n",
       "Answer: the signs and symptoms of astrocytomas are not the same in every child. signs and symptoms depend on the following:          - where the tumor forms in the brain or spinal cord.    - the size of the tumor.    - how fast the tumor grows.    - the child's age and development.        some tumors do not cause signs or symptoms. signs and symptoms may be caused by childhood astrocytomas or by other conditions. check with your child's doctor if your child has any of the following:         - morning headache or headache that goes away after vomiting.    -  nausea and vomiting.    - vision, hearing, and speech problems.     - loss of balance and trouble walking.     - worsening handwriting or slow speech.    - weakness or change in feeling on one side of the body.    - unusual sleepiness.    - more or less energy than usual.    - change in personality or behavior.    -  seizures.    - weight loss or weight gain for no known reason.     - increase in the size of the head (in infants).\n",
       "Source: cancergov\n",
       "\n",
       "---\n",
       "\n",
-      "Score: 0.05293363401160489\n",
+      "Score: 0.25293363401160489\n",
       "Question: what are the symptoms of childhood astrocytomas ?\n",
       "Answer: the signs and symptoms of astrocytomas are not the same in every child. signs and symptoms depend on the following:          - where the tumor forms in the brain or spinal cord.    - the size of the tumor.    - how fast the tumor grows.    - the child's age and development.        some tumors do not cause signs or symptoms. signs and symptoms may be caused by childhood astrocytomas or by other conditions. check with your child's doctor if your child has any of the following:         - morning headache or headache that goes away after vomiting.    -  nausea and vomiting.    - vision, hearing, and speech problems.     - loss of balance and trouble walking.     - worsening handwriting or slow speech.    - weakness or change in feeling on one side of the body.    - unusual sleepiness.    - more or less energy than usual.    - change in personality or behavior.    -  seizures.    - weight loss or weight gain for no known reason.     - increase in the size of the head (in infants).\n",
       "Source: cancergov\n",
       "\n",
       "---\n",
       "\n",
-      "Score: 0.05293363401160489\n",
+      "Score: 0.35293363401160489\n",
       "Question: what are the symptoms of childhood astrocytomas ?\n",
       "Answer: the signs and symptoms of astrocytomas are not the same in every child. signs and symptoms depend on the following:          - where the tumor forms in the brain or spinal cord.    - the size of the tumor.    - how fast the tumor grows.    - the child's age and development.        some tumors do not cause signs or symptoms. signs and symptoms may be caused by childhood astrocytomas or by other conditions. check with your child's doctor if your child has any of the following:         - morning headache or headache that goes away after vomiting.    -  nausea and vomiting.    - vision, hearing, and speech problems.     - loss of balance and trouble walking.     - worsening handwriting or slow speech.    - weakness or change in feeling on one side of the body.    - unusual sleepiness.    - more or less energy than usual.    - change in personality or behavior.    -  seizures.    - weight loss or weight gain for no known reason.     - increase in the size of the head (in infants).\n",
       "Source: cancergov\n",
